<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".Activity.TokenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_btn"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:text="BN"/>
        <Button
            android:id="@+id/btn_token_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_btn"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_token_list"/>
        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/logout" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:weightSum="6">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/enter_bl_number"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_edt"
                android:enabled="false"
                android:hint="@string/num_hint"
                android:inputType="none"
                android:maxLength="11"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

            <include layout="@layout/num_key" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_btn"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/btn_skip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_btn"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/btn_go"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <!--
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:orientation="vertical">
    
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_btn"
                    android:text="Token"
                    android:id="@+id/btn_token"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
    
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_btn"
                    android:text="SMS"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
    
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_btn"
                    android:text="Token list"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
    
            </LinearLayout>
    -->


</LinearLayout>